# Network-resource-monitor

./: .gitignore  CMakeLists.txt  README.md  TODOs.md  \  mainframe.cpp  mainframe.h
CMake/Modules/: Findmysql.cmake  Findmysqlcppconn.cmake
Client/: CMakeLists.txt  \
Client/include/: .system.h.swp  add-system-form.h  add-user-form.h  client.h  colors.h  cpu-performance.h  cpu-plot.h  environment-variable-panel.h  fonts.h  generic-plot.h  gui-element-id.h  linux.h  mainframe.h  msw.h  network-management-page.h  network-package.h  network-performance.h  network-plot.h  network-usage.h  performance-page.h  process-list-panel.h  process-sort-type.h  process.h  ram-performance.h  ram-plot.h  real-time-management-card.h  real-time-management-page.h  real-time-performance-page.h  recv-package.h  software-list-panel.h  system-administration-page.h  system-card.h  system-general-page.h  system-header.h  system-management-card.h  system-management-page.h  system-page.h  system-processes-page.h  system-software-page.h  system.h  (+7 more)
Client/src/: .system.cpp.swp  add-system-form.cpp  add-user-form.cpp  app.cpp  client.cpp  colors.cpp  cpu-performance.cpp  cpu-plot.cpp  evironment-variable-panel.cpp  fonts.cpp  generic-plot.cpp  linux.cpp  mainframe.cpp  mathplot.cpp  msw.cpp  network-management-page.cpp  network-package.cpp  network-performance.cpp  network-plot.cpp  performance-page.cpp  process-list-panel.cpp  process.cpp  ram-performance.cpp  ram-plot.cpp  real-time-management-card.cpp  real-time-management-page.cpp  real-time-performace-page.cpp  recv-package.cpp  software-list-panel.cpp  system-administration-page.cpp  system-card.cpp  system-general-page.cpp  system-header.cpp  system-management-card.cpp  system-management-page.cpp  system-page.cpp  system-processes-page.cpp  system-software-page.cpp  system.cpp  tray-icon.cpp  (+4 more)
Init/: client.ini  database_template.ini  system-logger-template.ini  system-logger.ini
SQL/: create-cpu_usage-table.sql  create-cpus-table.sql  create-environment_variables-table.sql  create-network_interface-table .sql  create-network_usage-table.sql  create-program_list-table.sql  create-systems-table.sql  create-usage_data-table.sql  create-user-list-table.sql  create-user_list-table.sql  create-users-table.sql  get-Cpu_Usage.sql  get-active-systems.sql  get-all-systems.sql  get-all-users.sql  get-cpu_id-from-cpu_name.sql  get-cpu_usage.sql  get-environment_variables.sql  get-inactive-systems.sql  get-last-id-usage_data.sql  get-network_id-from-network_interface.sql  get-network_usage.sql  get-program_list.sql  get-system-from-user.sql  get-system-id-from-user.sql  get-usage_data.sql  get-user-role.sql  get-user_list.sql  insert-cpu.sql  insert-cpu_usage.sql  insert-environment_variables.sql  insert-interface.sql  insert-network_usage.sql  insert-program_list.sql  insert-system.sql  insert-usage-data.sql  insert-usage_data.sql  insert-user.sql  insert-user_list.sql  update-system.sql  (+3 more)
Server/: CMakeLists.txt  Makefile  \
Server/include/: client-info.h  client-manager.h  database-manager.h  database-structs.h  logger.h  server.h
Server/src/: client-info.cpp  client-manager.cpp  database-manager.cpp  logger.cpp  main.cpp  server.cpp
Shared/: CMakeLists.txt
Shared/Communication-Protocol/: Communication-Protocol.h  communication-protocol.h
Shared/Communication-Protocol-lib/: CMakeLists.txt
Shared/Communication-Protocol-lib/include/: build-opts-communication-protocol.h  communication-protocol.h
Shared/Communication-Protocol-lib/src/: communication-protocol.cpp
Shared/Logger/: logger.h
Shared/Logger-lib/: CMakeLists.txt
Shared/Logger-lib/include/: build-opts-logger.h  logger.h  timestamp.h
Shared/Logger-lib/src/: logger.cpp  timestamp.cpp
Shared/Structs/: database-structs.h
Shared/System-lib/: CMakeLists.txt
Shared/System-lib/include/: build-opts-system.h  build_opts_system.h  jiffy.h  linux.h  msw.h  my-process.h  network-usage.h  system-structs.h  system.h
Shared/System-lib/src/: jiffy.cpp  linux.cpp  msw.cpp  my-process.cpp  system.cpp
Shared/Utils-lib/: CMakeLists.txt
Shared/Utils-lib/include/: build_opts_utils.h  database-utils.h  utils.h
Shared/Utils-lib/src/: database-utils.cpp  utils.cpp
include/: app.h  linux.h  mainframe.h  mathplot.h  msw.h  new_class.py  process.h  system.h  utils.h
src/: app.cpp  jiffy.cpp  linux.cpp  mainframe.cpp  msw.cpp  network-usage.cpp  process.cpp  system.cpp  utils.cpp
